--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/MAP_MyMap.MAP_MyMap
 EditorStartupMap=/Game/MAP_MyMap.MAP_MyMap
-GlobalDefaultGameMode=/Game/Player/Y2GameMode.Y2GameMode_C
+GlobalDefaultGameMode=/Game/Player/MyY2GameMode.MyY2GameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
