finished bs idc

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,8 @@
 GameDefaultMap=/Game/MAP_MyMap.MAP_MyMap
 EditorStartupMap=/Game/MAP_MyMap.MAP_MyMap
 GlobalDefaultGameMode=/Game/Player/MyY2GameMode.MyY2GameMode_C
+ServerDefaultMap=/Game/MAP_MyMap.MAP_MyMap
+TransitionMap=/Game/MAP_MyMap.MAP_MyMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -90,4 +92,11 @@ ManualIPAddress=
 
 [/Script/AIModule.AISystem]
 bForgetStaleActors=True
+
+[/Script/NavigationSystem.RecastNavMesh]
+bForceRebuildOnLoad=True
+RuntimeGeneration=Dynamic
+
+[/Script/UnrealEd.CookerSettings]
+bCookOnTheFlyForLaunchOn=True
 
