--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -8,3 +8,9 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [SectionsToSave]
 +Section=StartupActions
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+FullRebuild=True
+Build=Always
+IncludeAppLocalPrerequisites=True
+
